--- a/index.html
+++ b/index.html
@@ -43,8 +43,8 @@
 					Follow us for update!
 				</p>
 
-				<form class="contact100-form validate-form m-t-10 m-b-10" netlify>
-					<div class="wrap-input100 validate-input m-lr-auto-lg" data-validate = "Email is required: ex@abc.xyz">
+				<form class="contact100-form validate-form m-t-10 m-b-10" name="contact" netlify></form>
+					<div class="wrap-input100 validate-input m-lr-auto-lg" data-validate = "Email is required: example@abc.xyz">
 						<input class="s2-txt1 placeholder0 input100 trans-04" type="text" name="email" placeholder="Email Address">
 
 						<button class="flex-c-m ab-t-r size2 hov1 respon5" type="submit">
@@ -81,7 +81,7 @@
 		</div>
 			
 
-		<div class="wsize2 bg-img1 respon2" style="background-image: url('images/bg01.jpg');">
+		<div class="wsize2 bg-img1 respon2" style="background-image: url('images/bg02.jpg');">
 		</div>
 	</div>
 
