feat: bg update

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 					Follow us for update!
 				</p>
 
-				<form class="contact100-form validate-form m-t-10 m-b-10" name="contact" netlify></form>
+				<form class="contact100-form validate-form m-t-10 m-b-10" name="contact" netlify>
 					<div class="wrap-input100 validate-input m-lr-auto-lg" data-validate = "Email is required: example@abc.xyz">
 						<input class="s2-txt1 placeholder0 input100 trans-04" type="text" name="email" placeholder="Email Address">
 
