fix: logo change

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 		<div class="flex-w flex-col-sb wsize1 bg0 p-l-70 p-t-37 p-b-52 p-r-50 respon1">
 			<div class="wrappic1">
 				<a href="#">
-					<img src="images/icons/logo.png" alt="Virohaa City Logo">
+					<img src="images/icons/logo.jpeg" alt="Virohaa City Logo">
 				</a>
 			</div>		
 	
@@ -40,7 +40,7 @@
 				</h3>
 
 				<p class="m2-txt1 p-b-46">
-					Follow us for update!
+					Follow us for update on <span class="vc-highlight">Virohaa City Shahapur!</span>
 				</p>
 
 				<form class="contact100-form validate-form m-t-10 m-b-10" name="contact" netlify>
